final UI push. system is consistent.

--- a/app/src/main/res/layout/appnt_edit.xml
+++ b/app/src/main/res/layout/appnt_edit.xml
@@ -5,18 +5,18 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="24dp"
-    android:background="@color/blue">
+    android:background="@drawable/bg_dialog_rounded">
 
     <TextView
         android:id="@+id/dialogTitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="24dp"
         android:text="@string/review_appointment"
         android:textColor="@color/yellow"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="24dp" />
+        android:textSize="28sp"
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/dateInputLayout"
@@ -71,21 +71,24 @@
             android:textColor="@color/yellow"
             app:strokeColor="@color/yellow"
             android:layout_marginEnd="8dp"
-            android:padding = "16dp"
-            app:cornerRadius = "24dp"
+            android:padding="12dp"
+            app:cornerRadius="24dp"
+            app:strokeWidth="2dp"
+            android:textSize="20sp"
             />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/save"
-            android:backgroundTint="@color/yellow"
-            android:textColor="@color/blue"
             android:layout_marginStart="8dp"
-            android:padding = "16dp"
-            app:cornerRadius="24dp"/>
+            android:layout_weight="1"
+            android:backgroundTint="@color/yellow"
+            android:padding="12dp"
+            android:text="@string/save"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:cornerRadius="24dp" />
     </LinearLayout>
 
 </LinearLayout>
