--- a/app/src/main/res/layout/appnt_review.xml
+++ b/app/src/main/res/layout/appnt_review.xml
@@ -77,12 +77,13 @@
             android:layout_height="wrap_content"
             android:text="@string/studentno"
             android:textColor="@color/yellow"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/studentNumberValue"
             style="@style/ProfileInfoBox"
             android:layout_width="match_parent"
+            android:textSize="20sp"
             tools:text="212345678" />
 
         <TextView
@@ -91,12 +92,13 @@
             android:layout_marginTop="16dp"
             android:text="@string/medication_requirement"
             android:textColor="@color/yellow"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/medicationValue"
             style="@style/ProfileInfoBox"
             android:layout_width="match_parent"
+            android:textSize="20sp"
             tools:text="ARVs" />
 
         <TextView
@@ -105,12 +107,13 @@
             android:layout_marginTop="16dp"
             android:text="@string/food_requirement"
             android:textColor="@color/yellow"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/foodValue"
             style="@style/ProfileInfoBox"
             android:layout_width="match_parent"
+            android:textSize="20sp"
             tools:text="High protein" />
 
         <LinearLayout
@@ -129,11 +132,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/date"
                     android:textColor="@color/yellow"
-                    android:textSize="16sp" />
+                    android:textSize="20sp" />
+
                 <TextView
                     android:id="@+id/dateValue"
                     style="@style/ProfileInfoBox"
                     android:layout_width="match_parent"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
                     tools:text="2025-05-15" />
             </LinearLayout>
             <LinearLayout
@@ -147,11 +153,14 @@
                     android:layout_height="wrap_content"
                     android:text="@string/time_placeholder"
                     android:textColor="@color/yellow"
-                    android:textSize="16sp" />
+                    android:textSize="20sp" />
+
                 <TextView
                     android:id="@+id/timeValue"
                     style="@style/ProfileInfoBox"
                     android:layout_width="match_parent"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
                     tools:text="10:30 AM" />
             </LinearLayout>
         </LinearLayout>
@@ -164,7 +173,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="@color/yellow"
-        android:padding="8dp"
+        android:padding="12dp"
         android:text="@string/edit"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -185,7 +194,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="@color/yellow"
-        android:padding="8dp"
+        android:padding="12dp"
         android:text="@string/delete"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -202,12 +211,34 @@
         android:layout_height="wrap_content"
         android:text="@string/no_appointment_scheduled"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTextView"
+        app:layout_constraintTop_toBottomOf="@id/appointmentDetailsContainer"
+        app:layout_constraintVertical_bias="0.217"
         tools:visibility="visible" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/negativeButton"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="360dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
+        android:padding="12dp"
+        android:text="@string/Cancel"
+        android:textColor="@color/yellow"
+        android:textSize="20sp"
+        app:cornerRadius="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deleteButton"
+        app:layout_constraintVertical_bias="0.016"
+        app:strokeColor="@color/yellow"
+        app:strokeWidth="2dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
