--- a/app/src/main/res/layout/appnt_cancel_dialog.xml
+++ b/app/src/main/res/layout/appnt_cancel_dialog.xml
@@ -1,253 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/blue">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="24dp"
+    app:cornerRadius="24dp"
+    android:background="@drawable/bg_dialog_rounded"
+    android:gravity="center">
+
+    <ImageView
+        android:layout_width="127dp"
+        android:layout_height="125dp"
+        android:layout_marginBottom="0dp"
+        android:contentDescription="@string/logo"
+        android:src="@drawable/icon_logo" />
 
     <TextView
-        android:id="@+id/medicationsTitle"
+        android:id="@+id/confirmationMessageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="@string/med_med"
-        android:textColor="@color/yellow"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/medicationLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:clickable="false"
-        android:focusable="false"
-        android:text="@string/med_selection"
-        android:textColor="@color/yellow"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/medicationSpinnerContainer"
-        app:layout_constraintTop_toBottomOf="@id/medicationsTitle" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/medicationSpinnerContainer"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/border_white_rounded"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/medicationLabel">
-        <Spinner
-            android:id="@+id/medicationSpinner"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:paddingStart="16dp"
-            android:paddingEnd="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-            android:id="@+id/medicationDropdownArrow"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/med_dropdown_arrow"
-            android:scaleType="fitCenter"
-            android:src="@drawable/icon_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/yellow" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/brandLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:clickable="false"
-        android:focusable="false"
-        android:text="@string/med_brand"
-        android:textColor="@color/yellow"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/brandSpinnerContainer"
-        app:layout_constraintTop_toBottomOf="@id/medicationSpinnerContainer" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/brandSpinnerContainer"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="4dp"
-        android:alpha="0.5"
-        android:background="@drawable/border_white_rounded"
-        app:layout_constraintEnd_toEndOf="@id/medicationSpinnerContainer"
-        app:layout_constraintStart_toStartOf="@id/medicationSpinnerContainer"
-        app:layout_constraintTop_toBottomOf="@id/brandLabel">
-        <Spinner
-            android:id="@+id/brandSpinner"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:enabled="false"
-            android:paddingStart="16dp"
-            android:paddingEnd="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-            android:id="@+id/brandDropdownArrow"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/brand_dropdown_arrow"
-            android:scaleType="fitCenter"
-            android:src="@drawable/icon_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/yellow" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/dosageLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:clickable="false"
-        android:focusable="false"
-        android:text="@string/med_dose"
-        android:textColor="@color/yellow"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/dosageSpinnerContainer"
-        app:layout_constraintTop_toBottomOf="@id/brandSpinnerContainer" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/dosageSpinnerContainer"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="4dp"
-        android:alpha="0.5"
-        android:background="@drawable/border_white_rounded"
-        app:layout_constraintEnd_toEndOf="@id/brandSpinnerContainer"
-        app:layout_constraintStart_toStartOf="@id/brandSpinnerContainer"
-        app:layout_constraintTop_toBottomOf="@id/dosageLabel">
-        <Spinner
-            android:id="@+id/dosageSpinner"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:enabled="false"
-            android:paddingStart="16dp"
-            android:paddingEnd="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-            android:id="@+id/dosageDropdownArrow"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/med_dropdown_arrow"
-            android:scaleType="fitCenter"
-            android:src="@drawable/icon_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/yellow" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/quantityTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/border_white_rounded"
-        android:gravity="center_vertical"
-        android:padding="16dp"
-        android:textColor="@color/yellow"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/dosageSpinnerContainer"
-        app:layout_constraintStart_toStartOf="@id/dosageSpinnerContainer"
-        app:layout_constraintTop_toBottomOf="@id/dosageSpinnerContainer"
-        tools:text="Quantity on Hand" />
-
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/yellow"
-        android:padding="8dp"
-        android:text="@string/add"
+        android:layout_marginBottom="24dp"
+        android:gravity="center"
+        android:text="@string/cancel_booking_message"
         android:textColor="@color/white"
-        android:textSize="20sp"
-        app:cornerRadius="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/quitButton"
-        app:layout_constraintEnd_toStartOf="@+id/updateButton"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quantityTextView"
-        app:layout_constraintVertical_bias="0.5" />
+        android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/updateButton"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@color/yellow"
-        android:padding="8dp"
-        android:text="@string/update"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:cornerRadius="24dp"
-        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-        app:layout_constraintStart_toEndOf="@+id/addButton"
-        app:layout_constraintTop_toTopOf="@+id/addButton" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/yellow"
-        android:padding="8dp"
-        android:text="@string/delete"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:cornerRadius="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/updateButton"
-        app:layout_constraintTop_toTopOf="@+id/addButton" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/negativeButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:text="@string/Cancel"
+            android:textColor="@color/yellow"
+            android:textSize="20sp"
+            app:cornerRadius="24dp"
+            app:strokeColor="@color/yellow"
+            app:strokeWidth="2dp" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/quitButton"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="192dp"
-        android:padding="8dp"
-        android:text="@string/quit"
-        android:textColor="@color/yellow"
-        android:textSize="20sp"
-        app:cornerRadius="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="@color/yellow"
-        app:strokeWidth="2dp" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/positiveButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/yellow"
+            android:padding="12dp"
+            android:text="@string/yes"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:cornerRadius="24dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+</LinearLayout>
