--- a/app/src/main/res/layout/appnt_previous_dialog.xml
+++ b/app/src/main/res/layout/appnt_previous_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/blue"
+    android:background="@drawable/bg_dialog_rounded"
     android:padding="24dp">
 
     <ImageView
@@ -20,12 +20,13 @@
         android:id="@+id/confirmationMessageTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="@string/error_existing_booking"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />
 
