--- a/app/src/main/res/layout/dashboard_login.xml
+++ b/app/src/main/res/layout/dashboard_login.xml
@@ -28,7 +28,7 @@
         android:layout_height="335dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/logo"
+        android:src="@drawable/icon_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />
