--- a/app/src/main/res/layout/food_view.xml
+++ b/app/src/main/res/layout/food_view.xml
@@ -133,7 +133,7 @@
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
             android:padding="12dp"
-            android:text="@string/quit"
+            android:text="@string/Cancel"
             android:textColor="@color/yellow"
             android:textSize="20sp"
             app:cornerRadius="24dp"
