--- a/app/src/main/res/layout/general_confirm_dialog.xml
+++ b/app/src/main/res/layout/general_confirm_dialog.xml
@@ -5,12 +5,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="24dp"
-    android:background="@color/blue"
+    android:background="@drawable/bg_dialog_rounded"
     android:gravity="center">
 
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="90dp"
+        android:layout_height="83dp"
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/logo"
         android:src="@drawable/icon_logo" />
@@ -19,11 +19,11 @@
         android:id="@+id/confirmationMessageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:gravity="center"
-        android:text="@string/quit_booking_message"
+        android:text="Are you sure you want to go back?"
         android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_marginBottom="24dp" />
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,8 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:padding="18dp"
-            android:text="@string/no"
+            android:padding="12dp"
+            android:text="@string/Cancel"
             android:textColor="@color/yellow"
             android:textSize="20sp"
             app:cornerRadius="24dp"
@@ -52,7 +52,7 @@
             android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:backgroundTint="@color/yellow"
-            android:padding="16dp"
+            android:padding="12dp"
             android:text="@string/yes"
             android:textColor="@color/white"
             android:textSize="20sp"
