--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -17,7 +17,7 @@
             android:id="@+id/imageView_logo"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:contentDescription="@string/app_logo"
+            android:contentDescription="@string/logo"
             android:src="@drawable/icon_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
